used currency pipe

--- a/src/app/new-investment/new-investment.component.html
+++ b/src/app/new-investment/new-investment.component.html
@@ -2,13 +2,16 @@
     <div class="space-y-3">
         <div class="flex items-center justify-between">
             <label for="initialInvestment" class="text-sm font-medium text-zinc-400">Initial Investment</label>
-            <span
-                class="text-sm font-medium text-pink-500">₹‎ {{investmentCreated!.initialInvestment.toLocaleString()}}</span>
+            <span class="text-sm font-medium text-pink-500">
+                {{investmentCreated!.initialInvestment|currency:'INR':'symbol':'1.0-0' }}</span>
         </div>
         <input type="range" name="" id="" class="w-full" min="1000" max="100000" step="1000"
             [(ngModel)]="investmentCreated!.initialInvestment" (ngModelChange)="calculateInvestment()"
             class="h-2 w-full cursor-pointer appearance-none rounded-lg bg-zinc-700 accent-pink-500">
-        <div class="flex justify-between text-xs text-zinc-500"><span>₹‎ 1,000</span><span>₹‎ 100,000</span></div>
+        <div class="flex justify-between text-xs text-zinc-500">
+            <span> {{1000|currency:'INR':'symbol':'1.0-0' }}</span>
+            <span> {{100000 |currency:'INR':'symbol':'1.0-0' }}</span>
+        </div>
     </div>
     <div class="space-y-3">
         <div class="flex items-center justify-between">
@@ -47,9 +50,11 @@
     </div>
     <div class="mt-6 rounded-md bg-zinc-800/50 p-4">
         <div class="flex items-center justify-between"><span class="text-sm text-zinc-400">Final Value:</span><span
-                class="text-lg font-bold text-pink-500">₹‎ {{investmentAmount.toLocaleString()}}</span></div>
+                class="text-lg font-bold text-pink-500"> {{ investmentAmount | currency:'INR':'symbol' }}
+            </span></div>
         <div class="mt-2 flex items-center justify-between"><span class="text-sm text-zinc-400">Total
-                Interest:</span><span
-                class="text-sm font-medium text-purple-400">₹‎ {{interestRate.toLocaleString()}}</span></div>
+                Interest:</span><span class="text-sm font-medium text-purple-400">{{interestRate |
+                currency:'INR':'symbol'}}</span>
+        </div>
     </div>
 </div>
